# EPLATTFORMA-WMDS

./: .gitignore  .replit  ASSUMPTIONS_LOG.md  BARCODE_SCANNER_IMPLEMENTATION_GUIDE.md  KNOWN_GAPS.md  PHASE3_CLOSEOUT_MATRIX.txt  PHASE_TEST_RESULTS.md  Picking System Import.xlsx  Picking_Report_30_Sep_2025.xlsx  ROLLBACK_AND_FLAGS.md  SCHEDULED_SYNC_SETUP.md  SCHEDULING.md  add_discrepancy_actual_fields.py  ai_feedback_service.py  analysis.py  app.py  background_sync.py  batch_aware_order_status.py  batch_locking_admin_ui.py  batch_locking_utils.py  batch_update_customers.py  batch_utils.py  bulk_classify_customers.py  check_order_exp_dates.py  comprehensive_batch_lock_enforcement.py  config_ps365.py  cookies.txt  copy_prod_to_dev.py  create_test_data_direct.py  create_test_data_excel.py  cron_daily_invoice_sync.py  data_preparation.py  database_indexes.py  database_schema.sql  database_settings.py  datawarehouse_routes.py  datawarehouse_sync.py  db_maintenance.py  db_types.py  delete_guards.py  (+178 more)
.agents/: agent_assets_metadata.toml
attached_assets/: Activitylog_1773393893280.php  Driver_Receipt_SOP_1784205803282.md  FIX_001_COOLER_PRODUCTION_BUGS_1778775003706.md  FIX_002_BATCH_LOCK_NORMAL_ITEMS_1778785880440.md  FIX_003_BATCH_QUICK_WIN_BUGS_1783430815696.md  FIX_004_BATCH_STATUS_AND_EXCEPTIONS_1783430865911.md  FIX_005_BATCH_REPORT_CONSOLIDATION_1783430882416.md  FIX_006_DB_QUEUE_SINGLE_SOURCE_OF_TRUTH_1783430893609.md  FIX_007_COMPLETE_QUEUE_CUTOVER_1783495391845.md  FIX_008_ROUTE_STOP_ON_REPORTS_1783502460502.md  LogLastLoginAtObserver_1773393929787.php  (+455 more)
(+459 files in other folders)
