[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "pyjwt>=2.10.1",
    "werkzeug>=3.1.3",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "sqlalchemy>=2.0.41",
    "xlsxwriter>=3.2.3",
    "numpy>=2.2.5",
    "xlrd>=2.0.1",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "pytz>=2025.2",
    "openai>=1.82.0",
    "scikit-learn>=1.6.1",
    "joblib>=1.5.1",
    "psutil>=7.0.0",
    "pytest>=8.4.2",
    "reportlab>=4.4.4",
    "dropbox>=12.0.2",
    "apscheduler>=3.11.1",
]
